@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.114 2004/01/25 19:54:55 jaco Exp $
+# $Id: hwdetect.in,v 1.115 2004/01/26 05:25:31 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -1060,6 +1060,8 @@ sub hwdetect_getdisks {
 	}
 
 	### do all the cd, floppy stuff
+	my $numfloppy = 0;
+	my $numcd = 0;
 	foreach my $disk (@{$all_hdds->{raw_hds}}) {
 		if ($debug) {
 			print "removable: " . $disk->{info} . "\n";
@@ -1074,7 +1076,14 @@ sub hwdetect_getdisks {
 				$all_devs{$dev}->{dev}    = "/dev/".$disk->{device};
 				$all_devs{$dev}->{devfs}  = "/dev/".$disk->{devfs_device};
 				$all_devs{$dev}->{media}  = $disk->{media_type};
-				$all_devs{$dev}->{mount}  = "/mnt/".$disk->{device};
+				if ($disk->{media_type} =~ /^fd/) {
+					$all_devs{$dev}->{mount}  = "/mnt/floppy$numfloppy";
+					$numfloppy++;
+				}
+				else {
+					$all_devs{$dev}->{mount}  = "/mnt/cdrom$numcd";
+					$numcd++;
+				}
 				$all_devs{$dev}->{type}   = "auto";
 				if ($disk->{media_type} =~ /^cdrom/) {
 					$all_devs{$dev}->{opt} = $fsopt_fullro.",".$fsopt_noauto;
